refactoring: code cleanup